Fixed a css alignment issue

--- a/src/app/components/orders/orders-home/orders-home.component.scss
+++ b/src/app/components/orders/orders-home/orders-home.component.scss
@@ -28,6 +28,7 @@
 
     img {
       margin-right: 1.2rem;
+      align-self: flex-start;
     }
 
     p {
